--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,9 @@
     <!-- About Me Section -->
     <section class="py-16 px-6 md:px-20 bg-white shadow-inner">
         <h2 class="text-3xl font-bold mb-6 text-center text-indigo-600">About Me</h2>
+        <div class="flex justify-center mb-6">
+    <img src="{{ url_for('static', filename='amit.jpg') }}" alt="Amit Photo" class="w-40 h-40 rounded-full shadow-lg border-4 border-white">
+</div>
         <p class="text-lg text-center max-w-3xl mx-auto leading-relaxed">
             Hello! I'm <strong>Amit Samal</strong>, a professional Student & web developer and legal consultant based in Bhubaneswar, Odisha.
             I specialize in website creation, GST filing, ITR services, business registration, Poster & Flayer design, Business LOGO Making and much more. With a passion for helping businesses grow, I bring reliable and affordable services to entrepreneurs, startups, and freelancers across India.
